--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 Options All -Indexes
-
 RewriteEngine On
 
-RewriteRule ^([-a-zA-Z0-9/]+)$ index.php?url=$1
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([-a-zA-Z0-9/]+)$ index.php?url=$1 [QSA,L]
